--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "purecss": "~0.3.0",
     "jqtree": "~0.19.0",
     "backbone": "~1.1.0",
-    "backbone.babysitter": "~0.0.6"
+    "backbone.babysitter": "~0.0.6",
+    "backbone.marionette": "~1.4.1"
   }
 }
